# construction

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-linux.yml  codespell.yml
include/: block.h  constants.h  world.h
src/: block.cpp  main.cpp  world.cpp
